# modelstation

./: .env.template  .gitignore  DASHBOARD.md  DASHBOARD_SPLIT.md  LICENSE.md  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  package-lock.json
.github/workflows/: dokploy-deploy.yml
api/: Dockerfile  RUNPOD_API.md  pyproject.toml
api/app/: app.py  dependencies.py  lifespan.py
api/app/config/: __init__.py  settings.py
api/app/controllers/auth/: routes.py
api/app/controllers/cloud/: __init__.py  routes.py
api/app/controllers/health/: routes.py
api/app/controllers/models/: __init__.py  routes.py
api/app/controllers/pipeline/: __init__.py  routes.py
api/app/lib/: auth.py  runpod.py
api/app/prisma/: schema.prisma
api/app/prisma/migrations/20251026074730_dev/: migration.sql
api/app/prisma/migrations/20251026091631_dev/: migration.sql
api/app/prisma/migrations/20251026111927_add_model_prompt_and_uid/: migration.sql
api/app/prisma/migrations/20251026123216_dev/: migration.sql
api/app/services/: __init__.py  pipeline.py
scripts/finetuning_image/: Dockerfile  pyproject.toml
scripts/finetuning_image/src/: train.py
scripts/finetuning_image/src/train_app/: cli.py  data.py  trainer.py
scripts/seed/: Dockerfile  README.md  main.py  pyproject.toml
scripts/seed/src/: config.py  embed.py  ingest.py  utils.py
scripts/semantic_split/: main.py  pyproject.toml
scripts/semantic_split/app/: dataset_generator.py  settings.py
services/api/: .gitignore  Dockerfile  README.md  pyproject.toml  seed.py  test_db.py
services/api/app/: app.py  database.py  dependencies.py  prisma_patch.py
services/api/app/controllers/auth/: routes.py
services/api/app/controllers/models/: routes.py
services/api/app/controllers/pipeline/: __init__.py  routes.py
services/api/app/controllers/public/: routes.py
services/api/app/services/: embedding.py  runpod.py  weaviate_client.py
services/api/prisma/: schema.prisma  seed.js
services/manager/: Dockerfile  pyproject.toml
services/manager/app/controllers/: __init__.py
web/: .dockerignore  .env.example  Dockerfile  global.css  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/auth/login/: route.ts
web/app/api/auth/logout/: route.ts
web/app/api/auth/me/: route.ts
web/app/api/auth/register/: route.ts
web/app/api/models/: route.ts
web/app/api/models/[id]/: route.ts
web/app/api/pipeline/process/: route.ts
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/models/: page.tsx
web/app/workspace/: page.tsx
web/components/: drop-zone.tsx  providers.tsx  site-header.tsx
web/components/auth/: auth-provider.tsx
web/components/dashboard/: create-model-dialog.tsx  create-pod-dialog.tsx
web/components/models/: create-model-form.tsx
web/components/ui/: chart.tsx  field.tsx  input-group.tsx  input.tsx  item.tsx  sidebar.tsx  sonner.tsx
web/hooks/: use-auth.ts  use-user.examples.tsx  use-user.tsx
web/lib/: auth.ts  service-client.ts
web/prisma/: schema.prisma  seed.js
