[project]
name = "api"
version = "1.0.0"
description = "API service for ModelStation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.120.0",
    "prisma>=0.15.0",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "I",    # isort
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations
    "UP",   # pyupgrade (modernize code)
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
    "PERF", # Performance anti-patterns
]
ignore = [
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "E501",   # Line too long (handled by formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
