[project]
name = "semantic-split"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "uvicorn>=0.38.0",
    "weaviate>=0.1.2",
    "weaviate-client>=4.17.0",
    "pydantic-settings>=2.2.1",
    "huggingface-hub>=0.23.0",
    "openai>=2.6.1",
]
